Added Page and Transition System

--- a/Algorithim Presentation/game.html
+++ b/Algorithim Presentation/game.html
@@ -1,15 +1,15 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Gamedev Canvas Workshop</title>
+    <title>Floyd-Warshall Algorithm</title>
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas {  background: #eee; display: block; margin: 0 auto; }
+    	canvas {  background: #000000; display: block; margin: 0 auto; }
     </style>
 </head>
 <body>
 
-<canvas id="myCanvas" width="960" height="640"></canvas>
+<canvas id="myCanvas"></canvas>
 
 <script src="js/script.js"></script>
 
