--- a/Algorithim Presentation/regular.html
+++ b/Algorithim Presentation/regular.html
@@ -4,23 +4,26 @@
 	<title>Floyd-Warshall Algorithm</title>
 	<link rel="stylesheet" href="style/style.css">
 	<script src="js/regular.js"></script>
+	<script src="js/regData.js"></script>
 </head>
 <body>
-	<div id="mainTitle">
+	<center>
+		<div id="mainTitle">
 		<p1>Welcome to the Floyd-Warshall Algo Presentation!</p1>
 	</div>
 
 	<div id="description">
-		<p id = "description p" onmouseover="show(id)" onmouseout="hide(id)">The Floyd-Warshall Algorithm is an algorithm designed to discover the shortest paths between all possible pairs of vertices in a graph. Unlike other shortest path algorithms (like Dijkstra and Bellman-Ford), the Floyd-Warshall Algorithm allows for negatively-weighted edges.</p>
+		<p id = "description p" onmouseover="show(id)" onmouseout="hide(id)">Description</p>
 	</div>
 
 	<div id="howItWorks">
-		<canvas id="canvas" width="500" height="400" onmouseover="animation()" onmouseout="clearAnimation()"></canvas>
+		<canvas id="canvas" width= 946% height= 300% onmouseover="animation()" onmouseout="clearAnimation()"></canvas>
 	</div>
 
-	<div id="pseudocode" onmouseover="show(id)" onmouseout="hide(id)">
-		<pre>let V = number of vertices in graph <br>let dist = V x V array minimum distances <br>for each vertex v <br>  dist[v][v] = 0 <br>for each edge (u,v) <br>  dist[u][v] = weight(u,v) <br>for k from 1 to V <br>  for i from 1 to V <br>    for j from 1 to V <br>      if dist[i][j] > dist[i][k] + dist[k][j] <br>        dist[i][k] = dist[i][k] + dist[k][j] <br>    end if
-		</pre>
+	<div id="pseudocode">
+		<pre id="pseudocode pre" onmouseover="show(id)" onmouseout="hide(id)">Pseudocode</pre>
 	</div>
+
+	</center>
 </body>
 </html>
