Added Jquery and explanation for animation

--- a/Algorithim Presentation/regular.html
+++ b/Algorithim Presentation/regular.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Floyd-Warshall Algorithm</title>
 	<link rel="stylesheet" href="style/style.css">
+	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/regular.js"></script>
 	<script src="js/regData.js"></script>
 </head>
@@ -17,7 +18,11 @@
 	</div>
 
 	<div id="howItWorks">
-		<canvas id="canvas" width= 946% height= 300% onmouseover="animation()" onmouseout="clearAnimation()"></canvas>
+		<canvas id="canvas" width= 400% height= 300% onmouseover="animation()" onmouseout="clearAnimation()"></canvas>
+
+		<div id="explanation">
+			<p>Explantion</p>
+		</div>
 	</div>
 
 	<div id="pseudocode">
