Working on animation now

--- a/Algorithim Presentation/regular.html
+++ b/Algorithim Presentation/regular.html
@@ -18,10 +18,10 @@
 	</div>
 
 	<div id="howItWorks">
-		<canvas id="canvas" width= 400% height= 300% onmouseover="animation()" onmouseout="clearAnimation()"></canvas>
+		<canvas id="canvas" width= 946% height= 400% onmouseover="animation()" onmouseout="clearAnimation()" onclick="incrementPage()"></canvas>
 
 		<div id="explanation">
-			<p>Explantion</p>
+			<p id="explanation p">Click Box to Progress Animation</p>
 		</div>
 	</div>
 
