Finished Page One of Animations

--- a/Algorithim Presentation/regular.html
+++ b/Algorithim Presentation/regular.html
@@ -21,7 +21,7 @@
 		<canvas id="canvas" width= 946% height= 400% onmouseover="animation()" onmouseout="clearAnimation()" onclick="incrementPage()"></canvas>
 
 		<div id="explanation">
-			<p id="explanation p">Click Box to Progress Animation</p>
+			<p id="explanation p">Click Box to Progress Animation <br>Animation Will Reset If Mouse Leaves Area</p>
 		</div>
 	</div>
 
