--- a/Algorithim Presentation/regular.html
+++ b/Algorithim Presentation/regular.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Floyd-Warshall Algorithm</title>
-	<link rel="stylesheet" href="style/style.css">
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/regular.js"></script>
-	<script src="js/regData.js"></script>
-</head>
-<body>
-	<center>
-		<div id="mainTitle">
-		<p1>Welcome to the Floyd-Warshall Algo Presentation!</p1>
-	</div>
 
-	<div id="description">
-		<p id = "description p" onmouseover="show(id)" onmouseout="hide(id)">Description</p>
-	</div>
+	<head>
+		<title>Floyd-Warshall Algorithm</title>
+		<link rel="stylesheet" href="style/style.css">
+		<link rel="shortcut icon" type="image/x-icon" href="images/delo.png"/>
+		<script src="js/regular.js"></script>
+		<script src="js/regData.js"></script>
+	</head>
 
-	<div id="howItWorks">
-		<canvas id="canvas" width= 946% height= 400% onmouseover="animation()" onmouseout="clearAnimation()" onclick="incrementPage()"></canvas>
-
-		<div id="explanation">
-			<p id="explanation p">Click Box to Progress Animation <br>Animation Will Reset If Mouse Leaves Area</p>
+	<body>
+		<center>
+			<div id="mainTitle">
+			<p1>Welcome to the Floyd-Warshall Algo Presentation!</p1>
 		</div>
-	</div>
 
-	<div id="pseudocode">
-		<pre id="pseudocode pre" onmouseover="show(id)" onmouseout="hide(id)">Pseudocode</pre>
-	</div>
+		<div id="description">
+			<p id = "description p" onmouseover="show(id)" onmouseout="hide(id)">Description</p>
+		</div>
 
-	</center>
-</body>
+		<div id="howItWorks">
+			<canvas id="canvas" width= 946% height= 400% onmouseover="animation()" onclick="incrementPage()"></canvas>
+
+			<div id="explanation">
+				<p id="explanation p">Click Box to Progress Animation <br>Animation Will Reset If Mouse Leaves Area</p>
+			</div>
+		</div>
+
+		<div id="pseudocode">
+			<pre id="pseudocode pre" onmouseover="show(id)" onmouseout="hide(id)">Pseudocode</pre>
+		</div>
+
+		</center>
+	</body>
+
 </html>
