finished 5 pages and fixed thicc bug

--- a/Algorithim Presentation/regular.html
+++ b/Algorithim Presentation/regular.html
@@ -20,7 +20,7 @@
 		</div>
 
 		<div id="howItWorks">
-			<canvas id="canvas" width= 946% height= 400% onmouseover="animation()" onclick="incrementPage()"></canvas>
+			<canvas id="canvas" width= 946% height= 400% onclick="incrementPage()"></canvas>
 
 			<div id="explanation">
 				<p id="explanation p">Click Box to Progress Animation <br>Animation Will Reset If Mouse Leaves Area</p>
