One bug left pc push

--- a/Algorithim Presentation/regular.html
+++ b/Algorithim Presentation/regular.html
@@ -31,6 +31,11 @@
 			<pre id="pseudocode pre" onmouseover="show(id)" onmouseout="hide(id)">Pseudocode</pre>
 		</div>
 
+		<p>
+			<a href="https://www.geeksforgeeks.org/dynamic-programming-set-16-floyd-warshall-algorithm/">Research</a>
+			<a href="https://www.youtube.com/watch?v=4OQeCuLYj-4">Pseudocode</a>
+		</p>
+
 		</center>
 	</body>
 
