--- a/JQuery/JQuery.html
+++ b/JQuery/JQuery.html
@@ -4,16 +4,14 @@
     <title>JQuery</title>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link rel="stylesheet" type="text/css" href="style/jquery-ui.css">
 </head>
 <body>
-  <center>
-    <p>Duck Hunt</p>
-    <p>by Michael Hawke, Micheal Hunt, and Nicholas Ger</p>
-    <p>NE1 4ABJ</p>
-    <img src="images/delo.png">
-  </center>
+  <div>
+    <canvas id= 'canvas' width= 946% height= 400%></canvas>
+  </div>
+
+  <script type="text/javascript" src="js/race.js"></script>
 </body>
 </html>
