Pushing bug still frustrating

--- a/JQuery/JQuery.html
+++ b/JQuery/JQuery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-    <canvas id= 'canvas' width= 946% height= 400%></canvas>
+    <canvas id= 'myCanvas' width= 946% height= 400%></canvas>
   </div>
 
   <script type="text/javascript" src="js/race.js"></script>
