--- a/JQuery/JQuery.html
+++ b/JQuery/JQuery.html
@@ -24,7 +24,6 @@
   <div id = "information">
     <button id = "raceButton">Race</button>
     <button id = "betButton">Make Bet</button>
-    <button id = "playerButton">Add Player</button>
   </div>
 
   <div id ="betMenu">
@@ -32,6 +31,15 @@
       <form>
         <label for='betAmount'>Betting Amount:</label>
         <input id="betAmount" name="betAmount" value=0>
+      </form>
+    </fieldset>
+  </div>
+
+  <div id ="nameMenu">
+     <fieldset>
+      <form>
+        <label for='nameInput'>Player Name:</label>
+        <input id="nameInput" name="nameInput" value="">
       </form>
     </fieldset>
   </div>
