Need to add game loop and update tables after race

--- a/JQuery/JQuery.html
+++ b/JQuery/JQuery.html
@@ -21,6 +21,15 @@
     </table>
   </div>
 
+  <div id = 'raceHorsesInfo'>
+    <table id = 'horseTable'>
+      <thead>
+        <th>Horse</th>
+        <th>Bet</th>
+      </thead>
+    </table>
+  </div>
+
   <div id = "information">
     <button id = "raceButton">Race</button>
     <button id = "betButton">Make Bet</button>
@@ -45,6 +54,5 @@
   </div>
 
   <script type="text/javascript" src="js/data.js"></script>
-  <script type="text/javascript" src="js/race.js"></script>
 </body>
 </html>
