Added horse sprites and starting rendering

--- a/JQuery/JQuery.html
+++ b/JQuery/JQuery.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>JQuery</title>
+    <title>Boneless Horse Racing</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link rel="stylesheet" type="text/css" href="style/jquery-ui.css">
     <script type="text/javascript" src="js/jquery.js"></script>
@@ -50,7 +50,7 @@
   <div id ="betMenu">
     <fieldset>
       <form>
-        <label for='betAmount'>Betting Amount:</label>
+        <label for='betAmount'>Betting Amount ($):</label>
         <input id="betAmount" name="betAmount" value=0>
       </form>
     </fieldset>
