--- a/JQuery/JQuery.html
+++ b/JQuery/JQuery.html
@@ -40,7 +40,7 @@
 
     <div id = 'raceHorsesInfo'>
       <table id = 'horseTable'>
-        <thead>
+        <thead class="ui-widget-header">
           <th>Horse</th>
           <th>Bet</th>
         </thead>
